<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E9F3FB"
    tools:context=".Registration">

    <TextView
        android:id="@+id/txtview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center"
        android:text="@string/registration_form"
        android:textSize="35sp"
        android:textColor="#C35E9E"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColorHint="#84A6D3"
        android:hint="@string/firstname"/>

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:textColorHint="#84A6D3"
        android:textSize="20sp"
        android:hint="@string/lastname"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColorHint="#84A6D3"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:textColorHint="#84A6D3"
        android:textSize="20sp"
        android:hint="@string/password_1"/>

    <EditText
        android:id="@+id/pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColorHint="#84A6D3"
        android:hint="@string/re_type_password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="#84A6D3"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/female"/>

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="#84A6D3"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/male"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="#FF5B8AC8"
        android:layout_margin="10dp"
        android:text="@string/i_accept_terms_of_use"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="#C35E9E"
        android:textSize="25sp"
        android:text="@string/submit"/>
</LinearLayout>
