<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#362360"
    tools:context=".login">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="70sp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#84A6D3"
        android:layout_margin="20dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/img" />


    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColorHint="#E9F3FB"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:textColorHint="#E9F3FB"
        android:layout_gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="textPersonName"
        android:hint="@string/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="#E9F3FB"
        android:background="#C35E9E"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"/>

  <TextView
      android:id="@+id/account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:layout_weight="1"
      android:layout_marginTop="15dp"
      android:text="@string/create_your_account"
      android:textColor="#E9F3FB"
      android:gravity="center"/>



</LinearLayout>